# gitlab-depcheck

./: .coveragerc  .gitignore  .gitlab_depcheck.toml.example  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: lint-and-precommit.yml  publish.yml  test.yml
gitlab_depcheck/: cli.py
tests/: conftest.py  test_cli.py  test_dependency_checker.py  test_gitlab_client.py  test_integration.py
